src/objects/loan__Consolidated_Loan_Payment__c.object
<CustomObject>
    <description>This objects represents a consolidated loan payment.
For example, when an account / contact has multiple loans, this object can be used to make a payment and then this payment is split and applied to all the loans.</description>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consolidated Loan Payments</relationshipLabel>
        <relationshipName>Consolidated_Loan_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Consolidated Loan Payments</relationshipLabel>
        <relationshipName>Consolidated_Loan_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Date__c</fullName>
        <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Mode__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payment Mode</label>
        <referenceTo>loan__Payment_Mode__c</referenceTo>
        <relationshipLabel>Consolidated Loan Payments</relationshipLabel>
        <relationshipName>Consolidated_Loan_Payments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Reference__c</fullName>
        <description>Captures the check number</description>
        <inlineHelpText>Captures the check number</inlineHelpText>
        <label>Reference</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reversed</label>
        <type>Checkbox</type>
    </fields>
    <label>Consolidated Loan Payment</label>
    <nameField>
        <displayFormat>CLP-{00000000}</displayFormat>
        <label>Payment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consolidated Loan Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>